# marvin-blockchain-rust

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: main.yml
docs/: external-libraries.md  rust_go_block_encoding_comparison.md
src/: error.rs  main.rs
src/cli/: mod.rs
src/core/: block.rs  blockchain.rs  blockv2.rs  header_list.rs  mempool.rs  mod.rs  storage.rs  transaction.rs  transactionv2.rs
src/crypto/: keys.rs
src/proto/: mod.rs  types.proto
src/types/: block.rs  hash.rs  mod.rs  transaction.rs
src/utils/: log.rs  mod.rs
