[package]
name = "marvin-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = [
    "rand_core",
    "digest",
    "std",
    "alloc",
    "batch",
    "asm",
    "pkcs8",
] }
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
