[package]
name = "marvin-blockchain"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bip39 = "2.0.0"
clap = { version = "4.5.13", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = [
    "rand_core",
    "digest",
    "std",
    "alloc",
    "batch",
    "asm",
    "pkcs8",
    "serde",
] }
hex = "0.4.3"
pbkdf2 = "0.12.2"
prost = "0.13.1"
prost-types = "0.13.1"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.63"

[build-dependencies]
prost-build = "0.13.1"
